# prompt-engin-proj

./: .gitignore  PROJECT_TODO.md  README.md  ollama_templete.ipynb  pyproject.toml  requirements.txt  run_api.py
data/mock/: contacts_CS_department.md  faq_CS101.md  policy_accommodation.md  syllabus_CS101.md  timetable_CS101.md
frontend/: README.md  app.js  index.html  styles.css
notebooks/: 01_baseline_no_rag.ipynb  02_rag_pipeline.ipynb  03_evaluation.ipynb  baseline_no_rag_results.json  rag_pipeline_results.json
report/: README.md
src/: __init__.py
src/agent/: __init__.py  graph.py  hitl.py  tools.py
src/api/: __init__.py  server.py
src/evaluation/: __init__.py  quality_eval.py  token_tracker.py
src/generation/: __init__.py  ollama_client.py
src/ingestion/: __init__.py  chunker.py  file_upload.py  loader.py
src/memory/: __init__.py  conversation.py
src/prompt/: __init__.py  assembler.py  templates.py
src/retrieval/: __init__.py  bm25_retriever.py  hybrid_ranker.py  vector_retriever.py
tests/: test_agent.py  test_agent_tools.py  test_api_server.py  test_evaluation.py  test_file_upload.py  test_ingestion.py  test_prompt_generation_memory.py  test_retrieval.py
