[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-engin-proj"
version = "0.1.0"
description = "HKBU study companion skeleton for prompt engineering and RAG workflows"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "faiss-gpu-cu12>=1.14.1; sys_platform == 'linux'",
    "faiss-cpu>=1.13.2; sys_platform != 'linux'",
    "langchain>=1.2.14",
    "langchain-community>=0.4.1",
    "langgraph>=1.1.4",
    "ollama>=0.6.1",
    "pypdf>=6.9.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.0.0",
    "pdfplumber>=0.11.9",
    "nltk>=3.9.4",
    "tiktoken>=0.12.0",
    "rouge-score>=0.1.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "requests>=2.33.1",
    "playwright>=1.58.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "tdqm>=0.0.1",
    "python-dotenv>=1.2.2",
    "matplotlib>=3.10.8",
]
